# ppgr-data-engineering

./: .gitignore  load_data.py  pyproject.toml
data/: GI.xlsx  cgms timeseries data.xlsx  lifestyle_timeseries_data.xlsx  perid.csv
doc/: _load_data.py  clean_dataset.py  tutorial.py
scripts/process-data/: main.py
scripts/train-ppgr/: main.py
src/cgms/: __init__.py  main.py
src/cgms/dataset/: __init__.py  dataset.py  schema.py
src/cgms/scripts/: main.py  versions.py
src/cgms/scripts/process-data/: requirements.txt
src/cgms/scripts/rank-ppgr/: main.py
tests/: conftest.py
tests/dataset/: test_dataset.py
